# oil-gas-quicksight

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: quicksight_bug.md
.github/workflows/: codeql.yml  deploy.yml  python-tests.yml  terraform.yml
analytics/: run_query.sh
analytics/curated/: 01_well_daily.sql  02_esd_events.sql  03_nag602_daily.sql  04_plant_hourly.sql
analytics/queries/: 01_overview.sql  02_esd_timeline.sql  02_sacada_timeline.sql  03_flare_during_esd.sql  03_flare_during_sacada.sql  04_nag602_compliance.sql  05_well_lifecycle.sql
data/demo/: esd_events.json  plant_esd.json  utilities_esd.json  wells_esd.json
docs/: ARCHITECTURE.md  OVERVIEW.es.md  OVERVIEW.md  SIMULATOR_SPEC.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/data/: demo
frontend/src/: App.tsx  index.css
frontend/src/components/: ClockProbe.tsx  TimeTransport.css  TimeTransport.tsx
frontend/src/data/: dataSource.ts  tagConfig.ts  useActiveEsdPhase.ts  useSeries.ts
frontend/src/displays/: AnalyticsDisplay.css  (+12 more)
infra/aws/: .terraform.lock.hcl  iam-deploy.tf  iam-runtime.tf  kinesis.tf  main.tf  outputs.tf  providers.tf  quicksight-embed.tf  quicksight.tf  variables.tf
infra/localstack/: docker-compose.yml  main.tf  outputs.tf  providers.tf
scripts/: athena.sh  export_demo_data.py
simulator/: pyproject.toml
simulator/src/: __init__.py  cli.py  config.py  events.py  output.py  physics.py  plant.py  quality.py  simulator.py  simulator_v1.py.bak  stream.py  utilities.py  wells.py
simulator/tests/: conftest.py  test_events.py  test_integration.py  test_physics.py  test_quality.py  test_stream.py
(+24 files in other folders)
