[project]
name = "simulator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.9",
    "faker>=40.18.0",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/simulator_v1.py.bak",
    "src/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
